@@ -9,10 +9,10 @@
  */
 /* Animated throbber */
 html.js input.form-autocomplete {
-  background-position: 0% 2px;
+  background-position: 0% center;
 }
 html.js input.throbbing {
-  background-position: 0% -18px;
+  background-position: 0% center;
 }
 
 /**
